Add Google Sign-In and update pricing to free limited time offer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HomeRun Coach AI - Turn your ideas into a clear business plan</title>
     <meta name="description" content="AI-powered business coaching that guides you through Story, Solution, and Success to create a concrete Business Action Plan." />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
